force-app/main/default/objects/Program_Payment__c/Program_Payment__c.object-meta.xml
<CustomObject>
    <label>Program Payment</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Fee Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>