force-app/main/default/objects/Program_Payment__c/fields/Club_Program__c.field-meta.xml
<CustomField>
    <fullName>Club_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Program</label>
    <referenceTo>Club_Program__c</referenceTo>
    <relationshipLabel>Program Payments</relationshipLabel>
    <relationshipName>Program_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>