force-app/main/default/objects/Program_Payment__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <inlineHelpText>This is a club fee object</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Club_Fees__c</referenceTo>
    <relationshipLabel>Program Payments</relationshipLabel>
    <relationshipName>Program_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>