force-app/main/default/objects/Program_Payment__c/validationRules/Club_Program_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Club_Program_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Parent__r.Club_Program__r.Id  &lt;&gt;  Club_Program__r.Id</errorConditionFormula>
    <errorDisplayField>Club_Program__c</errorDisplayField>
    <errorMessage>Parent&apos;s Club Program does not match</errorMessage>
</ValidationRule>