force-app/main/default/objects/Program_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Parent__c</columns>
    <columns>Club_Program__c</columns>
    <columns>Amount__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>