force-app/main/default/objects/Program_Payment__c/listViews/Jan_May_2023.listView-meta.xml
<ListView>
    <fullName>Jan_May_2023</fullName>
    <columns>Parent__c</columns>
    <columns>Amount__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Club_Program__c</field>
        <operation>contains</operation>
        <value>Jan-May</value>
    </filters>
    <label>Jan-May 2023</label>
</ListView>