force-app/main/default/objects/Program_Payment__c/listViews/Sunday_Club_Payments.listView-meta.xml
<ListView>
    <fullName>Sunday_Club_Payments</fullName>
    <columns>Parent__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Club_Program__c</field>
        <operation>contains</operation>
        <value>Volleyball</value>
    </filters>
    <label>Sunday Club Payments</label>
</ListView>